welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: not found: value nombreNiveau
      nombreNiveau=nombreNiveau+1
      ^island:8: error: not found: value nombreNiveau
  return nombreNiveau
         ^